--- a/index.html
+++ b/index.html
@@ -20,26 +20,30 @@
         <img src="./assets/assets/avatar.png" alt="" />
         <p>@Guaxuta</p>
       </div>
-      <div id="swith" onclick="toggLeMode()" >
+      <div id="swith" onclick="toggLeMode()">
         <button></button>
         <span> </span>
       </div>
       <ul>
         <li>
-          <a href="#">Inscreva-se no NLW</a>
+          <a href="https://www.facebook.com/guaxuta/" target="blank"
+            >Sobre Mim</a
+          >
         </li>
         <li>
-          <a href="#">Veja Meu Portifólio</a>
+          <a href="https://github.com/guaxuta" target="blank"
+            >Veja Meu Portifólio</a
+          >
         </li>
         <li>
-          <a href="https://rocketseat.com.br" target="_blank"
-            >Conheça O Explorer</a
+          <a href="https://wa.me/qr/5234SHYWILL2J1" target="_blank"
+            >Entre em Contato</a
           >
         </li>
       </ul>
       <div id="social-links">
-        <a href="#" target="blank">
-          <ion-icon name="logo-github"></ion-icon>
+        <a href="https://twitter.com/HenriqueGuaxuta" target="blank">
+          <ion-icon name="logo-twitter"></ion-icon>
         </a>
         <a href="https://www.instagram.com/guaxuta/" target="blank">
           <ion-icon name="logo-instagram"></ion-icon>
@@ -68,8 +72,6 @@
       nomodule
       src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"
     ></script>
-<script src="script.js" ></script>
-
-
+    <script src="script.js"></script>
   </body>
 </html>
